# botventure

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  Vagrantfile  vagrant.sh
data/maps/: default.map
data/maps/tutorial/: 00.README  00.map  001.README  002.README  003.README  003.map  004.README  004.map  01.map  02.map
inc/map/: map2d.hpp
inc/network/: defaults.hpp  gameconnection.hpp  gameconnectionfactory.hpp  messages.hpp
maps/: default.map
rubygem/: CMakeLists.txt  Rakefile.in  botventure.gemspec.in
rubygem/ext/botventure/: extconf.rb
src/: CMakeLists.txt  botventureconfig.h  botventureconfig.h.in  client.cpp  server.cpp
src/bot/: CMakeLists.txt  robot.cpp  robot.hpp
src/game/: CMakeLists.txt
src/game/cpp/: CMakeLists.txt  client.cpp  server.cpp
src/game/ruby/: CMakeLists.txt  botventure  player.rb  samplebot.rb
src/game/ruby/bots/: player.rb  samplebot.rb
src/map/: CMakeLists.txt  map2d.cpp  map2d.hpp
src/network/: CMakeLists.txt  gameconnection.cpp  gameconnection.hpp  gameconnectionfactory.hpp  gameserver.cpp  gameserver.hpp  messagereader.cpp  messagereader.hpp  messages.hpp  messagewriter.cpp  messagewriter.hpp
src/network/messages/: CMakeLists.txt  action.proto  botstatus.proto  enemy.proto  game.proto  handshake.proto  header.proto  map.proto  sensor.proto  turn.proto
src/roll/: CMakeLists.txt  roll.cpp  roll.hpp
src/world/: CMakeLists.txt  map2d.cpp  map2d.hpp  mob.cpp  mob.hpp  position.cpp  position.hpp  worldmanager.cpp  worldmanager.hpp
swig/: CMakeLists.txt  botventure.i  robot.i
